--- a/ffaefu/package.json
+++ b/ffaefu/package.json
@@ -12,6 +12,7 @@
     "express": "~4.16.1",
     "express-session": "^1.17.0",
     "http-errors": "~1.6.3",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "node-cron": "^2.0.3"
   }
 }
